--- a/back-office/templates/question/show.html.twig
+++ b/back-office/templates/question/show.html.twig
@@ -237,10 +237,14 @@
        consequently #}
     {#        {% endif %}#}
     <input type="hidden" name="token" value="{{ csrf_token('question_edit_token') }}"/>
+    <div class="d-flex">
+        <a href="{{ path('question_index') }}" class="btn btn-secondary me-2">Liste</a>
+        <a href="{{ path('question_edit', {'id': question.id}) }}" class="btn btn-primary me-2" >Modifier</a>
+        {{ include('question/_delete_form.html.twig') }}
+    </div>
 
-    <a href="{{ path('question_index') }}">back to list</a>
 
-    <a href="{{ path('question_edit', {'id': question.id}) }}">edit</a>
 
-    {{ include('question/_delete_form.html.twig') }}
+
+
 {% endblock %}
