--- a/back-office/templates/question/edit.html.twig
+++ b/back-office/templates/question/edit.html.twig
@@ -244,7 +244,7 @@
         <button type="submit" class="btn btn-primary me-2">Envoyer</button>
     </form>
     <div class="d-flex mt-4">
-        <a href="{{ path('question_index') }}" class="btn btn-secondary me-2">Liste</a>
+        <a href="{{ path('question_index') }}" class="btn btn-secondary me-2">Retour</a>
         {{ include('question/_delete_form.html.twig') }}
     </div>
 
