--- a/back-office/templates/question/new.html.twig
+++ b/back-office/templates/question/new.html.twig
@@ -174,7 +174,7 @@
         <input type="hidden" name="token" value="{{ csrf_token('question_new_token') }}"/>
         <div class="d-flex mt-4">
             <button type="submit" class="btn btn-primary me-2">Envoyer</button>
-            <a href="{{ path('question_index') }}" class="btn btn-secondary">Liste</a>
+            <a href="{{ path('question_index') }}" class="btn btn-secondary">Retour</a>
         </div>
     </form>
 {% endblock %}
