--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -282,10 +282,6 @@ button {
     letter-spacing: 0.5px;
 }
 
-button:disabled {
-    opacity: 0.6;
-}
-
 #login-form,
 #register-form,
 #forgot-password-form,
@@ -438,41 +434,131 @@ button:disabled {
 }
 
 .game-mode {
-    width: 34%;
-    padding: 20px 40px 40px 40px;
-    margin-bottom: 80px;
-    border-radius: 40px;
-    border: none;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+    /*width: 34%;*/
+    /*padding: 20px 40px 40px 40px;*/
+    /*margin-bottom: 80px;*/
+    /*border-radius: 40px;*/
+    /*border: none;*/
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*justify-content: flex-start;*/
+    /*align-items: center;*/
+    /*overflow: hidden;*/
+
+    border: 3px solid #fff;
+    border-radius: 30px;
+
+    color: #fff;
+    background-color: #24BFF0;
+
+    transition: background-color 0.15s ease-out;
+
+    height: 280px;
+    width: 280px;
+    padding: 0;
+
     overflow: hidden;
 }
 
-.game-mode:enabled:hover {
-    filter: brightness(95%);
+.game-mode-button-content {
+    height: 100%;
+
+    transition: transform 0.15s ease-out;
 }
 
+.game-mode:hover .game-mode-button-content {
+    transform: translateY(-80%);
+}
 
-.game-mode:enabled:hover {
+.game-mode:not(.disabled):hover {
     cursor: pointer;
+
+    /*background-color: #14a9d9;*/
+}
+
+.game-mode.disabled.disabled-animation {
+    animation: game-mode-disabled-click 0.2s linear;
+}
+
+@keyframes game-mode-disabled-click {
+    0% {
+        transform: translateX(-10px);
+    }
+
+    20% {
+        transform: translateX(8px);
+    }
+
+    40% {
+        transform: translateX(-6px);
+    }
+
+    60% {
+        transform: translateX(4px);
+    }
+
+    80% {
+        transform: translateX(-2px);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+.game-mode-label-container {
+    display: flex;
+    flex-direction: column;
+
+    height: 100%;
+}
+
+.game-mode-icon-container {
+    height: 80%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.game-mode-icon {
+    max-width: 80%;
+    max-height: 80%;
+}
+
+.game-mode-label {
+    height: 20%;
+
+    text-align: center;
+    font-size: 2rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.game-mode-label-disabled {
+    max-width: 30px;
+    max-height: 30px;
+    margin-left: 5px;
+}
+
+.game-mode-description-container {
+    height: 80%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.game-mode-description {
+    font-size: 1rem;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .game-mode:focus {
     outline: none;
-}
-
-.game-mode-label {
-    font-size: 2.3em;
-    color: white;
-    margin-bottom: 20px;
-}
-
-.game-mode-description {
-    color: white;
-    font-size: 1.4em;
-    line-height: 1.3em;
 }
 
 .category-container {
@@ -520,22 +606,6 @@ button:disabled {
 .category-name {
     font-size: 1.8em;
     color: white
-}
-
-.gm-serie {
-    background-color: #EAB01F;
-}
-
-.gm-ascension {
-    background-color: #217D9E;
-}
-
-.gm-blitz {
-    background-color: #DE4567;
-}
-
-.gm-survivant {
-    background-color:  #1E9B48;
 }
 
 .large-button {
