Refactoring most of question controller methods into util controller; new controllers will be faster to produce

--- a/back-office/templates/question/index.html.twig
+++ b/back-office/templates/question/index.html.twig
@@ -148,13 +148,13 @@
             <div class="col-2">
                 <label class="me-1 form-check-label">
                     <input type="checkbox" class="form-check-input" id="isHardcore-input"
-                           data-checkbox="isHardcore" data-action="change->question#onSingleCheckboxChange"/>
+                           data-checkbox="isHardcore" data-action="change->question#onUniqueCheckboxChange"/>
                     <span>Hardcore</span>
                 </label>
 
                 <label class="form-check-label">
                     <input type="checkbox" class="form-check-input" id="hasMedia-input"
-                           data-checkbox="hasMedia" data-action="change->question#onSingleCheckboxChange"/>
+                           data-checkbox="hasMedia" data-action="change->question#onUniqueCheckboxChange"/>
                     <span>Media</span>
                 </label>
             </div>
